RIP-v9.8- /mobile overflow fix in progress

--- a/css/onboarding.css
+++ b/css/onboarding.css
@@ -1,24 +1,23 @@
 .onboarding-Space {
   display: flex;
+  align-content: flex-start;
 }
 
 .onboardingSteps-Space {
   display      : flex;
-  height: 100%;
-  width        : 100%;
   align-content: flex-start;
   align-items  : flex-start;
-  overflow  : hidden;
-
+  
 }
 
 .onboarding-steps {
   display        : flex;
-  height: 100%;
+  height: auto;
   width: 100%;
   flex-direction : column;
   align-items    : center;
   justify-content: flex-start;
+  overflow: hidden;
 }
 
 .rules .step-info-main {
@@ -27,10 +26,6 @@
   gap            : 20px;
   justify-content: space-between;
   flex-direction : column !important;
-}
-
-#rulesStep {
-  height: 100vh;
 }
 
 .tri-colm-img {
@@ -48,6 +43,7 @@
   width          : 100%;
   height         : auto;
 
+  
   
 }
 
@@ -118,6 +114,7 @@
 .step-img {
   display            : flex;
   width              : 100%;
+  height: 100%;
   min-height         : 150px;
   background-color   : rgba(85, 76, 125, 0.15);
   border-radius      : 10px;
@@ -210,6 +207,7 @@
   height        : 100%;
   width         : 100%;
   gap           : 40px;
+  justify-content: flex-end;
 }
 
 .step-main {
@@ -351,8 +349,9 @@
   flex-direction: column;
   padding       : 0px;
   margin-bottom : 0px;
+  justify-content: flex-start;
 
-
+  
 }
 
 .global-back-btn {
@@ -369,9 +368,8 @@
 }
 
 @media (min-width: 580px) and (max-width: 1055px) {
-  #rulesStep {
-    height: auto !important;
-  }
+
+
 
   .step-nav {
     display: flex !important;
@@ -414,9 +412,7 @@
 }
 
 @media (min-width: 370px) and (max-width: 579px) {
-  #rulesStep {
-    height: auto !important;
-  }
+
 
   .step-nav {
     display: none !important;
@@ -492,9 +488,6 @@
 }
 
 @media (min-width: 200px) and (max-width: 369px) {
-  #rulesStep {
-    height: auto !important;
-  }
 
   .step-nav {
     display: none !important;
